# hello-spine

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/blueeagle/hellospine/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/include/: Sticker.h
app/src/main/cpp/include/utils/: GLES2Utils.h  StringUtils.h  TimeUtils.h
app/src/main/cpp/src/: GLES2Utils.cpp  Sticker.cpp  StickerWrapper.cpp
app/src/main/cpp/src/utils/: GLES2Utils.cpp  StringUtils.cpp  TimeUtils.cpp
app/src/main/java/com/blueeagle/hellospine/: MainActivity.java
app/src/main/java/com/blueeagle/hellospine/gl/: GLHelper.java  StickerRenderer.java  StickerRendererManager.java  StickerSurfaceView.java
app/src/main/java/com/blueeagle/hellospine/views/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/blueeagle/hellospine/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
